--- a/environments/local.env
+++ b/environments/local.env
@@ -1,11 +1,12 @@
-REDIS_PORT=6001
+REDIS_PORT=12312
 REDIS_HOST=127.0.0.1
 LOG_LABEL=bull-monitor
 LOG_LEVEL=debug
 PORT=3000
 NODE_ENV=development
 COLLECT_NODEJS_METRICS=false
-BULL_WATCH_QUEUE_PREFIXES=bull
+BULL_WATCH_QUEUE_PREFIXES=bull:
 BULL_COLLECT_QUEUE_METRICS_INTERVAL_MS=5000
 UI=bull-board
 VERSION=local
+REDIS_PASSWORD=xxxx
