feat(research): исправил проблему с поиском очередей

--- a/environments/local.env
+++ b/environments/local.env
@@ -1,4 +1,4 @@
-REDIS_PORT=6001
+REDIS_PORT=12312
 REDIS_HOST=127.0.0.1
 LOG_LABEL=bull-monitor
 LOG_LEVEL=debug
@@ -9,3 +9,4 @@ BULL_WATCH_QUEUE_PREFIXES=bull
 BULL_COLLECT_QUEUE_METRICS_INTERVAL_MS=5000
 UI=bull-board
 VERSION=local
+REDIS_PASSWORD=xxxx
